# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/GLFW/: glfw3.h
include/glad/: glad.h
include/glm/gtc/: matrix_transform.hpp  matrix_transform.inl
include/gtest/internal/: gtest-string.h
include/stb/: stb_image.h
resources/shader/: hello.frag  hello.vert  transform.frag  transform.vert
resources/shader/lighting/basic_lighting/: cube1.fs  cube2.vs  cube3.fs
resources/texture/: block.jfif
shader/: hello.frag
src/: CMakeLists.txt  Camera.cpp  Camera.h  Constants.h  Shader.cpp  Shader.h  Utils.cpp  Utils.h  VAOManager.h  glad.c  util.cpp  util.h
test/: CMakeLists.txt  defs.cpp  defs.h  test.cpp  texture.cpp
test/getting_started/: Camera.cpp  CoordinateSystems.cpp  HelloTriangle.cpp  HelloWindow.cpp  Shaders.cpp  Textures.cpp  Transformations.cpp
test/lighting/: BasicLighting.cpp  Colors.cpp
